After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740451 - srtpdec: leaks rtp/rtcp sink events
srtpdec: leaks rtp/rtcp sink events
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-20 18:22 UTC by Aleix Conchillo Flaqué
Modified: 2014-11-20 20:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstevent memory leak fixes (2.21 KB, patch)
2014-11-20 18:24 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2014-11-20 18:22:36 UTC
gst_srtp_dec_sink_event_rtp and gst_srtp_dec_sink_event_rtcp doesn't unref the GstEvent when receiving a GST_EVENT_CAPS.
Comment 1 Aleix Conchillo Flaqué 2014-11-20 18:24:21 UTC
Created attachment 291117 [details] [review]
gstevent memory leak fixes
Comment 2 Olivier Crête 2014-11-20 18:33:46 UTC
Comment on attachment 291117 [details] [review]
gstevent memory leak fixes

Comitted:

commit 086cc58952ac1d98236da503ad08979f844ce8d0
Author: Aleix Conchillo Flaqué <aleix@oblong.com>
Date:   Thu Nov 20 10:23:30 2014 -0800

    srtpdec: fix rtp/rtcp sink event memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740451