srtpdec: fix rtp/rtcp sink event memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=740451